--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ body {
 
 /* start landing */
 .landing {
-    background-image: url(./963397.jpg);
+    background-image: url(963397.jpg);
     background-size: cover;
     height: 100vh;
     margin: 0;
@@ -563,6 +563,7 @@ body {
 }
 
 /*end footer*/
+
 
 
 
